Deliver class invitations
